fix(status-change-ui): fixed status overflow and busy icon size

--- a/components/interactables/QuickProfile/QuickProfile.less
+++ b/components/interactables/QuickProfile/QuickProfile.less
@@ -24,7 +24,14 @@
 
     .text-container {
       flex-grow: 1;
-      overflow: hidden;
+      box-sizing: border-box;
+      overflow-x: clip;
+
+      * {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
     }
 
     > *:not(.text-container) {
